--- a/index.html
+++ b/index.html
@@ -297,12 +297,12 @@
         <div class="project-wrapper__text">
           <h3 class="project-wrapper__text-title">Instagram Scraper Tool</h3>
           <p class="project-wrapper__text-info">
-            A desktop tool that automates data collection from Instagram using <strong>React & Python</strong>.
+            A desktop tool that automates data collection from Instagram using <strong>Python</strong>.
             Supports session persistence, CSV export, and video downloading. 
             Designed for digital marketers to gather insights more efficiently.
           </p>
           <p class="project-wrapper__text-info">
-            <strong>Stack:</strong> Python, Playwright, PythonNiceGUI, Pandas
+            <strong>Stack:</strong> Python, Playwright, NiceGUI, Pandas
           </p>
           <div class="project-wrapper__text-btns">
             <a href="#" target="_blank" rel="noopener noreferrer" class="cta-btn cta-btn--hero cta-btn--projects">See Live</a>
