--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <!-- Fill content with the URL of this portfolio you'll host -->
-    <meta property="og:url" content="https://devfolio.js.org/" />
+    <meta property="og:url" content="" />
     <!-- Fill content with the title of your portfolio(Recommended to use what you put in <title> tag) -->
     <meta property="og:title" content="B&Y| Developer" />
     <!-- Give a short description that'll show up when you/someone shares your portfolio on different platform -->
@@ -34,7 +34,7 @@
       so that a thumbnail image of your portfolio is shown while shared on other platform -->
     <meta
       property="og:image"
-      content="https://devfolio.js.org/assets/devfolio.png"
+      content="https://devfolio.js.org/assets/BY.png"
     />
 
     <!-- Twitter -->
@@ -42,7 +42,7 @@
     <!-- Again fill content attr with the URL of this portfolio you'll host -->
     <meta property="twitter:url" content="" />
     <!-- Recommended to use the same text used within <title> element -->
-    <meta property="twitter:title" content="Boualam | Developer" />
+    <meta property="twitter:title" content="Boualam |Yacine | Full Stack Developers" />
     <!-- short description that shows up while your portfolio is shared -->
     <meta
       property="twitter:description"
